# BUA

./: README.md  setup.cfg  setup.py
src/bua/: __init__.py
src/bua/_setup/: setup_script.py
src/bua/bipv/: bipv_inverter.py  bipv_panel.py
src/bua/building/: __init__.py  building_basic.py  building_modeled.py
src/bua/building/context_filter/: building_context.py  building_lwr_context.py  building_shading_context.py  utils_functions_context_filter.py
src/bua/building/energy_simulation/: building_energy_simulation.py
src/bua/building/geometry/: prepare_lb_polyface3d.py
src/bua/building/merge_hb_model_faces/: merge_hb_model_faces.py
src/bua/building/solar_radiation_and_bipv/: solar_rad_and_BIPV.py  utils_bipv.py  utils_sensorgrid.py
src/bua/building/utils_buildings/lbt_obj_methods/: lb_face_addons.py  (+1 more)
src/bua/config/: __init__.py  bua_config_structure.py  config_bua_folder_architecture.py  config_default_values_user_parameters.py
src/bua/simulation_steps/: __init__.py  context_filtering.py  context_selection.py  general_function_for_main.py  load_bat_file_arguments.py  load_building_or_geometry.py  solar_radiation_and_bipv.py  urban_building_energy_simulation_functions.py
src/bua/urban_canopy/: __init__.py  bipv_scenario_urban_canopy.py  urban_canopy.py
src/bua/urban_canopy/kpis/: __init__.py  urban_canopy_kpis.py
src/bua/urban_canopy/ubes/: uc_energy_simulation.py
src/bua/urban_canopy/uc_context_filter/: shade_manager.py
tests/simulation_steps/: conftest.py  context_selection_test.py  load_building_and_geometry_test.py  test_bipv_sim.py
