[metadata]
name = your_package
version = 0.1.0
description = Your package description
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
packages = find:
install_requires =
    # List your package dependencies here

[options.entry_points]
console_scripts =
    # Define console scripts if any
