[metadata]
name = bua
description = Your package description
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
packages = find:
exclude =
    tests*
install_requires =


[options.extras_require]
dev =
    pytest

[options.packages.find]
where = src
exclude =
    tests*
    examples*


[tool:pytest]
pythonpath = .